{
    "name": "Controls",
    "maps": [
        {
            "name": "CamMovement",
            "id": "40df497d-1197-4e0d-9122-dd198835cb7e",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "0bc2a390-2be1-40b9-b20c-eba38f3ce182",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "88893d6d-09ea-4105-892a-056f42999717",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScroll",
                    "type": "PassThrough",
                    "id": "c5e2b7e3-936e-479c-a18c-eb9ed1d23c59",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PanActive",
                    "type": "Button",
                    "id": "175c5575-7b18-403e-98d0-f1c0ea70567c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5928fb8c-f4e2-4c82-826c-c73a812a3af1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b7ef2ea2-1ba3-464d-9b4e-5487311b12e0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2b9cb67-c2c6-4d8c-84a7-856fff393a44",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "855c77bb-ad34-4613-ab67-4bca78a68cfa",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72e9dfb4-8202-4582-a214-50363bade1dd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af81daae-9a61-496c-8dfb-20b19ca5bb85",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PanActive",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "ec7a3945-45c0-4dd7-bf04-d26753289fe0",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "4b86d9d4-16e8-4c49-b278-e93112b57fdb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ece07aca-85ed-4697-ad43-479c95486726",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Cam",
            "bindingGroup": "Cam",
            "devices": []
        }
    ]
}